Added few components.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,7 @@
-
-<table>
-  <tr>
-    <td class="header">
-      <app-header></app-header>
-    </td>
-  </tr>
-  <tr>
-    <td class="leftmenu">
-      <app-leftmenu></app-leftmenu>
-    </td>
-    <td class="workarea">
-      <app-workarea></app-workarea>
-    </td>
-  </tr>
-  <tr>
-    <td class="footer">
-      <app-footer></app-footer>
-    </td>
-  </tr>
-
-</table>
+<body>
+  <div class="wrapper">
+    <app-leftmenu></app-leftmenu>
+  </div>
+  
+  <div class="overlay"></div>
+</body>
