--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,15 @@
-<h5>pNext</h5>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+
+        <div class="navbar-header">
+            <a type="logo" class="navbar-brand">
+                <i class="glyphicon glyphicon-phone"></i>
+                <span>pNext App</span>
+            </a>
+            <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
+                <i class="glyphicon glyphicon-align-left"></i>
+                <span>Menu</span>
+            </button>
+        </div>
+    </div>
+</nav>
