--- a/src/app/leftmenu/leftmenu.component.html
+++ b/src/app/leftmenu/leftmenu.component.html
@@ -1,1 +1,23 @@
-<h5>leftmenu</h5>
+<!-- Sidebar Holder -->
+<nav id="sidebar">
+    <div id="dismiss">
+        <i class="glyphicon glyphicon-arrow-left"></i>
+    </div>
+
+    <div class="sidebar-header">
+        <h3>CEIR</h3>
+    </div>
+
+    <ul class="list-unstyled components">
+        <li class="active">
+            <a href="#">User Managment</a>
+        </li>
+        <li>
+            <a href="#">Staff Managment</a>
+        </li>
+    </ul>
+
+    <ul class="list-unstyled CTAs">
+        <li><a href="#" class="download">About Us</a></li>
+    </ul>
+</nav>
