--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,9 +1,3 @@
-h5{
-    color: white;
-    font-size: 10-px;
+body{
     background-color: teal;
-    padding: 20px;
-    margin: 0px;
-    bottom: 0px;
-    position: absolute;
 }
