--- a/src/app/workarea/workarea.component.css
+++ b/src/app/workarea/workarea.component.css
@@ -1,8 +1,3 @@
-h5{
-    color: wheat;
-    font-size: 20px;
-    background-color: teal;
-    padding: 0px;
-    margin: 0px;
-    bottom: 0px;
+body{
+    background-color: wheat;
 }
