--- a/src/app/workarea/workarea.component.html
+++ b/src/app/workarea/workarea.component.html
@@ -1,1 +1,31 @@
-<h5>workarea works!</h5>
+<!-- Page Content Holder -->
+<div id="content">
+    <h2>User Managment</h2>
+    <div class="line"></div>
+    <table class="table">
+        <thead>
+          <tr>
+            <th>Firstname</th>
+            <th>Lastname</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>john@example.com</td>
+          </tr>
+          <tr>
+            <td>Mary</td>
+            <td>Moe</td>
+            <td>mary@example.com</td>
+          </tr>
+          <tr>
+            <td>July</td>
+            <td>Dooley</td>
+            <td>july@example.com</td>
+          </tr>
+        </tbody>
+      </table>
+</div>
