--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,12 @@ body{
     margin: 0px;
     padding: 0px;
     bottom: 0px;
+
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body { 
+    margin: 0; 
+    font-family: 'Poppins', sans-serif;
+    background: #fafafa;
+}
